[package]
name = "cloudmedia"
version = "0.1.0"
authors = ["lizhiyong2000 <lizhiyong2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
#members = ["ffmpeg"]

[dependencies]
ffmpeg = { package = "cloudmedia-ffmpeg", path = "deps/ffmpeg" }

strum = "0.18.0"
strum_macros = "0.18.0"

futures = "0.3.5"
parallel-event-emitter = { version = "0.2.4", features = ["default"] }
pnet_macros_support = "0.26"
trackable = "0.1"
#handy_async = "0.2.3"
bytecodec="0.4.13"

serde = { version = "1.0.107", features = ["derive"] }
nom = "6.0.0-alpha1"
rand = "0.7.3"
sha = "1.0.3"
md5 = "0.7.0"

log = {version = "0.4.6"}
#serde = {version = "1.0" , optional = true}
serde_derive = {version = "1.0" , optional = true}
url = {version="2.1.0"}
rust-crypto = "0.2"
num = "0.1"
splay_tree = "0.2"



bytes = "0.4.12"
byteorder = "1.0"
chrono = "0.4.6"
#futures = "0.1.25"
itertools = "0.8.0"
lazy_static = "1.3.0"
ordered-multimap = "0.2.2"
#rand = "0.6.5"
#rtsp-common = { path = "../rtsp-common" }
#tokio = "0.2.21"
tokio = { version = "0.2.21", features = ["full"] }

#tokio-codec= "0.2.0-alpha.6"
#tokio-io = "0.2.0-alpha.6"
#tokio-timer = "0.2.0-alpha.6"
#tokio-executor = "0.2.0-alpha.6"
#tokio-codec = "0.1.2"
#tokio-executor = "0.1.6"
#tokio-io = "0.1.13"
#tokio-tcp = "0.1.4"
#tokio-timer = "0.2.13"
#uriparse = "0.6.1"
uriparse = {git ="https://github.com/sgodwincs/uriparse-rs.git"}
fnv = "1.0.6"
linked_hash_set = "0.1.3"
tower-service = "0.3.0"
regex = "1.1.6"
base64 = "0.10.1"
mime = "0.3.13"



#base64 = "0.11.0"
#bytes = "0.5.3"

#cstr = "0.1.7"
#cursive = "0.14.0"
##db = { package = "moonfire-db", path = "db" }
#structopt = { version = "0.3.13", features = ["default", "wrap_help"] }
#
#failure = "0.1.1"
#futures = "0.3"
#fnv = "1.0"
#http = "0.2.0"
#http-serve = { git = "https://github.com/scottlamb/http-serve", branch = "dir", features = ["dir"] }
#hyper = "0.13.0"
#lazy_static = "1.0"
#libc = "0.2"
#log = { version = "0.4", features = ["release_max_level_info"] }
#memchr = "2.0.2"
#memmap = "0.7"
#mylog = { git = "https://github.com/scottlamb/mylog" }
#nix = "0.17.0"
#nom = "5.1.1"
#openssl = "0.10"
#parking_lot = { version = "0.10", features = [] }
#protobuf = { git = "https://github.com/stepancheg/rust-protobuf" }
#reffers = "0.6.0"
#ring = "0.14.6"
#rusqlite = "0.22.0"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#smallvec = "1.0"
#time = "0.1"
#tokio = { version = "0.2.0", features = ["blocking", "macros", "parking_lot", "rt-threaded", "signal"] }
#tokio-tungstenite = "0.10.1"
#url = "2.1.1"
#uuid = { version = "0.8", features = ["serde", "std", "v4"] }

[dev-dependencies]
assert_matches = "1.3"
pnet_macros = "0.26"
tokio = { version = "0.2.20", features = ["net", "macros", "time"] }


[build-dependencies]
glob = "0.3"
syntex = "0.42"
pnet_macros = "0.26"
#reqwest = { version = "0.10.1", features = ["json"] }
#tempdir = "0.3"

[profile.release]
debug = true

[profile.bench]
debug = true
