[package]
name = "cloudmedia"
version = "0.1.0"
authors = ["lizhiyong2000 <lizhiyong2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
#members = ["ffmpeg"]

[dependencies]
url = "2.1.1"
http = "0.2.1"
indexmap = "1.6.0"
uncased = "0.9.1"
atomic = "0.5.0"

futures = "0.3.5"
#tokio = { version = "0.2.22", features = ["full"] }
tokio = { git = "https://github.com.cnpmjs.org/tokio-rs/tokio.git", features = ["full"] }
#tokio-io = "0.2.0-alpha.6"
#tokio-codec= "0.2.0-alpha.6"
#tokio-util = { version = "0.3.1", features = ["full"] }

#tokio-util = { git = "https://github.com/tokio-rs/tokio.git", features = ["full"]}
tokio-util = { git = "https://github.com.cnpmjs.org/tokio-rs/tokio.git", features = ["full"]}

mime = "0.3.16"
bytes = "0.5.6"
ordered-multimap = "0.2.4"
linked_hash_set = "0.1.3"
uriparse = "0.6.3"
lazy_static = "1.3.0"
chrono = "0.4.15"
itertools = "0.8.2"
rand = "0.7.3"

base64 = "0.11.0"
regex = "1.3.9"
#log = { version = "0.4", features = ["release_max_level_info"] }
log = "0.4.8"
log4rs = "0.10.0"
fnv = "1.0.6"
md5 = "0.7.0"
byteorder = "1.0"



#sdp
trackable = "1.0.0"
strum = "0.18.0"
strum_macros = "0.18.0"

#sip
nom = "6.0.0-alpha1"
serde = { version = "1.0.107", features = ["derive"] }
#serde = {version = "1.0" , optional = true}
serde_derive = {version = "1.0" , optional = true}
sha = "1.0.3"

#rtp
splay_tree = "0.2"
rust-crypto = "0.2"
pnet_macros_support = "0.26"
num = "0.1"
#ffmpeg = { package = "cloudmedia-ffmpeg", path = "deps/ffmpeg" }
#

#

#parallel-event-emitter = { version = "0.2.4", features = ["default"] }


##handy_async = "0.2.3"
#bytecodec="0.4.13"
#




#
#

#url = {version="2.1.0"}






#bytes = "0.4.12"





#fnv = "1.0.6"

#tower-service = "0.3.0"


#cstr = "0.1.7"
#cursive = "0.14.0"
##db = { package = "moonfire-db", path = "db" }
#structopt = { version = "0.3.13", features = ["default", "wrap_help"] }
#
#failure = "0.1.1"
#fnv = "1.0"

#lazy_static = "1.0"
#libc = "0.2"

#memchr = "2.0.2"
#memmap = "0.7"
#mylog = { git = "https://github.com/scottlamb/mylog" }
#nix = "0.17.0"
#nom = "5.1.1"
#openssl = "0.10"
#parking_lot = { version = "0.10", features = [] }
#protobuf = { git = "https://github.com/stepancheg/rust-protobuf" }
#reffers = "0.6.0"
#ring = "0.14.6"
#rusqlite = "0.22.0"

#smallvec = "1.0"
#time = "0.1"
#tokio-tungstenite = "0.10.1"

#uuid = { version = "0.8", features = ["serde", "std", "v4"] }

[dev-dependencies]
assert_matches = "1.3"
pnet_macros = "0.26"


[build-dependencies]
#glob = "0.3"
#syntex = "0.42"
#pnet_macros = "0.26"
#reqwest = { version = "0.10.1", features = ["json"] }
#tempdir = "0.3"

[profile.release]
debug = true

[profile.bench]
debug = true
